# api/docs/swagger.json
@@ -2342,24 +2342,6 @@
                     }
                 }
             }
-        },
-        "/metrics": {
-            "get": {
-                "description": "Return Prometheus metrics.",
-                "tags": [
-                    "monitoring"
-                ],
-                "summary": "Metrics",
-                "operationId": "metricsGet",
-                "responses": {
-                    "200": {
-                        "description": "Prometheus metrics",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -2982,10 +2964,6 @@
         {
             "description": "Client address labels and known hosts.",
             "name": "tagger"
-        },
-        {
-            "description": "Service monitoring endpoints.",
-            "name": "monitoring"
         },
         {
             "description": "Browser authentication session endpoints.",
